# sqs-listener

./: .coveragerc  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  app.py  docker-compose.yml  makefile  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: sonar-tests.yml
src/sqs_fargate_listener/: __init__.py  core.py  decorator.py  logging_setup.py  types.py
tests/: test_core.py  test_decorator.py  test_types.py
